--- a/template/user/login.html
+++ b/template/user/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}Login{% endblock %}
 
@@ -15,7 +16,7 @@
         <form method="post" action={{form.action}}>
             {% csrf_token %}
             {{ form.as_p }}
-             <button class="btn btn-dark" type="submit">Submit</button>
+             <button class="btn #0277bd light-blue darken-3" type="submit">Submit</button>
         </form>
     </div>
 {% endblock%}
