--- a/template/user/register.html
+++ b/template/user/register.html
@@ -18,7 +18,7 @@
             {{form.username | as_crispy_field}}
             {{form.password | as_crispy_field}}
             {{form.avatar | as_crispy_field}}
-          <button class="btn #0277bd light-blue darken-3" style="color:darkblue" type="submit" >Register</button>
+          <button class="btn btn-primary" style="color:darkblue" type="submit" >Register</button>
       </form>
         <br>
 
