--- a/template/base.html
+++ b/template/base.html
@@ -3,41 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Shop | {% block title %}{% endblock %}</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     {% block css %}{% endblock %}
 </head>
 <body>
-    <nav>
-        <div class="nav-wrapper" style="background: #1976d2">
-          <a href="#" class="brand-logo">Logo</a>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="/"><strong>Home</strong></a></li>
-            {% if user.is_authenticated %}
-                <li><a href="{% url 'retrieve' user.username %}"><strong>{{user.username}}</strong></a></li>
-                <li><a href="logout"><strong>Logout</strong></a></li>
-            {% else %}
-                <li><a href="register"><strong>Register</strong></a></li>
-                <li><a href="login"><strong>Login</strong></a></li>
-
-            {% endif %}
-          </ul>
-        </div>
-    </nav>
+   <nav class="navbar navbar-expand-lg navbar-light " style="background-color:#1d7bf1">
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="/"><strong>Home</strong></a>
+      </li>
+      {% if user.is_authenticated %}
+        <li class="nav-item active">
+            <a class="nav-link" href="{% url 'retrieve' user.username %}"><strong>{{user.username}}</strong></a>
+         </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="logout" ><strong>Logout</strong></a>
+        </li>
+      {%else %}
+        <li class="nav-item active">
+            <a class="nav-link" href="register"><strong>Register</strong></a>
+         </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="login" ><strong>Login</strong></a>
+       {% endif%}
+    </ul>
+  </div>
+</nav>
       {% if messages %}
         {% for message in messages %}
             {% if message.tags == 'success'%}
-                <script>M.toast({html: "{{message}}", classes: 'green rounded', displayLength:2000});</script>
+                <script>M.toast({html: "{{message}}", classes:  'toast-body'});</script>
             {% elif message.tags == 'info'%}
-                <script>M.toast({html: "{{message}}", classes: 'blue rounded', displayLength:2000});</script>
+                <script>M.toast({html: "{{message}}", classes:  'toast-body'});</script>
             {% elif message.tags == 'warning'%}
-                <script>M.toast({html: "{{message}}", classes: 'orange rounded', displayLength:10000});</script>
+                <script>M.toast({html: "{{message}}", classes:  'toast-body' });</script>
             {% elif message.tags == 'error'%}
-                <script>M.toast({html: "{{message}}", classes: 'red rounded', displayLength:10000});</script>
+                <script>M.toast({html: "{{message}}", classes: 'toast-body'});</script>
             {% endif %}
         {% endfor %}
     {% endif %}
