--- a/template/user/login.html
+++ b/template/user/login.html
@@ -4,8 +4,6 @@
 {% block title %}Login{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 {% endblock %}
@@ -15,8 +13,8 @@
         <h1>Login</h1>
         <form method="post" action={{form.action}}>
             {% csrf_token %}
-            {{ form.as_p }}
-             <button class="btn #0277bd light-blue darken-3" type="submit">Submit</button>
+            {{ form | crispy }}
+             <button class="btn btn-primary" type="submit">Submit</button>
         </form>
     </div>
 {% endblock%}
