--- a/template/base.html
+++ b/template/base.html
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="/"><strong>Home</strong></a>
+        <a class="nav-link" href="{% url 'product_list' %}"><strong>Home</strong></a>
       </li>
       {% if user.is_authenticated %}
         <li class="nav-item active">
