--- a/template/product/product_detail.html
+++ b/template/product/product_detail.html
@@ -55,7 +55,7 @@
                 <p>{{object.description}}</p>
             </div>
           </div>
-         <a href="https://www.varzesh3.com/" style="color:white">
+         <a href="{% url 'add_product' object.pk %}" style="color:white">
            <button type="button" class="btn btn btn-primary" style="border-radius: 5px; width:90px">Add</button>
          </a>
         <a href="{% url 'star' object.pk %}">
