--- a/template/product/product_list.html
+++ b/template/product/product_list.html
@@ -11,17 +11,14 @@
     <div class="card-deck">
         {% for pr in object_list%}
           <div class="card">
-            <img src="{{pr.medias.first.media_file.url}}" class="card-img-top" alt="...">
+            <img src="{{pr.medias.first.media_file.url}}" class="card-img-top" alt="..." style="height: 155px;border-radius: 5px;">
             <div class="card-body">
               <h5 class="card-title">{{pr.name}}</h5>
               <p class="card-text">price: {{pr.price}}</p>
               <p class="card-text">{{pr.category.name}}</p>
             </div>
               <div class="card-body">
-                     <a href="https://www.varzesh3.com/" style="color:white">
-                         <button type="button" class="btn btn btn-primary" style="border-radius: 10px;">Add</button>
-                     </a>
-                      <a href="https://www.varzesh3.com/" style="color:white">
+                      <a href="{% url 'product_detail' pr.pk%}" style="color:white">
                          <button type="button" class="btn btn-primary" style="border-radius: 10px;" >Detail</button>
                       </a>
               </div>
