--- a/template/user/register.html
+++ b/template/user/register.html
@@ -12,7 +12,7 @@
         Please write your name, email address and a message below if  you have any questions.
         One of our staff members will be happy to contact you directly and answer your questions as soon as possible.
       </p>
-      <form action="" method="POST" enctype="multipart/form-data">
+      <form action="{{form.action}}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.email | as_crispy_field}}
             {{form.username | as_crispy_field}}
